deploy/k8s/overlays/local/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openlaunch-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: IfNotPresent
